# hw3-eliseger

./: .gitignore  Makefile  README.md  ai_documentation.txt  index.md  pyproject.toml
.github/workflows/: deploy.yml  pages.yml
.ipynb_checkpoints/: environment-checkpoint.yml
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
